added fix to project.clj connected to javax.xml.bind.DatatypeConverte